<resources>

    <!--No hace falta traducir-->
    <string name="ads_initialize_test" translatable="false">a-app-pub-3940256099942544~3347511713</string>
    <string name="ads_banner_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ads_intersticial_id_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="app_name" translatable="false">Wander</string>
    <string name="title_activity_prueba_itinerario">Itinerary test</string>
    <string name="title_activity_prueba_poi">POI test</string>
    <string name="title_activity_lista_itinerarios">Itineraries list</string>
    <string name="title_activity_lista_puntosdeinteres">POI list</string>
    <string name="title_activity_POIdetalle">POI detail</string>
    <string name="title_activity_POIcreate">Create POI</string>
    <string name="title_activity_PerfilUsuario">User profile</string>
    <string name="title_activity_EditarPerfilUsuario">Edit user profile</string>
    <string name="select_POI">Add POI</string>

    <!--AlertDialogRateApp-->
    <string name="layout_dra_title">RATE THE APP</string>
    <string name="layout_dra_subtitle">Please, if you enjoy our app rate and comment it. We are young developers and your contributions are very valuable for us.</string>
    <string name="layout_dra_btn_rate">COMMENT NOW</string>
    <string name="layout_dra_btn_rate_later">REMEMBER LATER</string>

    <string name="drawer_open">navigation drawer opened</string>
    <string name="drawer_close">navigation drawer closed</string>
    <string name="usuario_creado_toast">User created. Start session with your credentials</string>
    <string name="login_incorrecto">Incorrect email or password</string>
    <string name="login_error">There has been an error, try again later</string>
    <string name="nombre_itinerario">Itinerary name</string>I
    <string name="abrir">Open</string>
    <string name="eliminar">Delete</string>
    <string name="visitado">Visited</string>
    <string name="borrar_itinerario">Delete itinerary</string>
    <string name="borrar_itinerario_pregunta">¿Are you sure you want to delete this itinerary?</string>
    <string name="borrar_poi">Delete point of interest</string>
    <string name="borrar_poi_pregunta">¿Are you sure you want to delete this point of interest?</string>
    <string name="crear_poi_error">Error adding a point</string>
    <string name="crear_poi_cancel">Canceled by user</string>
    <string name="cambio_realizado">Change done</string>
    <string name="error_cambio">Error on change</string>
    <string name="prueba">Test</string>
    <string name="mapa">Map</string>
    <string name="coordenadas">Coordinates</string>
    <string name="registrar_usuario_error">There has been an error, try again later</string>
    <string name="registrar_usuario_existe">An user already exists with this email</string>
    <string name="campo_vacio_error">This field could not be empty</string>
    <string name="titulo">Títle</string>
    <string name="descripcion">Description</string>
    <string name="detalle">Detail</string>
    <string name="latitud">Latitude</string>
    <string name="longitud">Longitude</string>
    <string name="iniciar_sesion">Start session</string>
    <string name="correo">Email</string>
    <string name="contrasena">Password</string>
    <string name="repite_contrasena">Repeat password</string>
    <string name="recordarme">Remember</string>
    <string name="mostrar_contrasena">Show password</string>
    <string name="borrar">Delete</string>
    <string name="registrarse">Register</string>
    <string name="puntos_de_interes">Points of interest</string>
    <string name="registrar_correo">Registry email</string>
    <string name="nombre">Name</string>
    <string name="apellido">Surname</string>
    <string name="itinerarios">Itineraries</string>
    <string name="primer_dia_visita">First visit date</string>
    <string name="logo_subtitulo">¡Tu gestor de rutas!</string>
    <string name="cancelar">Cancel</string>
    <string name="preferencias">Preferences</string>
    <string name="finalizar_sesion">End session</string>
    <string name="rutas">Routes</string>
    <string name="satelite">Satellite</string>
    <string name="hibrido">Hybrid</string>
    <string name="tierra">Terrain</string>
    <string name="tipo_mapa">Map type</string>
    <string name="tipo_mapa_summary">Choose map type</string>
    <string name="dialog1">Want to add</string>
    <string name="dialog2">to the itinerary?</string>
    <string name="titulo_dialog">Add point of interest</string>
    <string name="confirmar">Confirm</string>
    <string name="sobre_nosotros">About us</string>
    <string name="votanos">Rate us</string>
    <string name="comparte_la_app">Share the app</string>
    <string name="politica_de_privacidad">Privacy policy</string>
    <string name="rellena_campos">Fill all the fields</string>
    <string name="usuario_nombre">Name</string>
    <string name="usuario_apellidos">Surnames</string>
    <string name="usuario_telefono">Phone</string>
    <string name="usuario_edad">Age</string>
    <string name="usuario_localizacion">Localization</string>
    <string name="editar">edit</string>
    <string name="guardar">save</string>
    <string name="comentario">Add commentary</string>
    <string name="escribe_tu_comentario">Write your commentary</string>

    <string name="compras">Purchases</string>
    <string name="quitar_anuncios">Remove ads</string>
    <string name="mostrar_en_mapa">Show in map</string>
    <string name="poner_anuncios">Reload Ads (Development)</string>
    <string name="marcar_como_visitado">Mark as visited</string>
    <string name="nueva_valoracion">New evaluation</string>
    <string name="no_encontrado">Not found</string>
    <string name="no_disponible">Not available</string>
    <string name="servicio_no_disponible">InApp Billing service not available</string>
    <string name="archivo_no_encontrado">File not found</string>
    <string name="ninguna_compra_reiniciar">No purchsases to reload</string>
    <string name="compra_reiniciada">Reloaded purchase</string>
    <string name="compra_completada">Completed purchase</string>
    <string name="seleccionado">Clicked</string>
    <string name="id_lugar">Place ID</string>
    <string name="contrasenas_no_coinciden">Passwords do not match</string>
    <string name="email_no_valido">E-mail is not valid</string>
    <string name="no_hay_contraseña">Password has not been set</string>
    <string name="usuario_email">Email</string>
    <string name="telefono">Phone</string>
    <string name="web">Web</string>
    <string name="categoria">Category</string>
    <string name="precio">Price</string>
    <string name="informacion">Information</string>
    <string name="enlace_wiki">Wikipedia link</string>
    <string name="localizacion">Localization</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="valoracion_google">Google evaluation</string>
    <string name="entendido">Understood</string>
    <string name="seleccione_fecha">Choose a date</string>
    <string name="seleccione_imagen">Choose an image</string>
    <string name="crear">Create</string>
    <string name="identificar">Identify</string>
    <string name="ver_en_mapa">See on map</string>
    <string name="eliminar_punto">Delete point</string>
    <string name="valorar_el_lugar">Rate the place</string>
    <string name="perfil_de_usuario">User profile</string>
    <string name="ver_itinerario_en_mapa">See itinerary on map</string>
    <string name="eliminar_itinerario">Delete itinerary</string>
    <string name="nombre_de_usuario">Username</string>
    <string name="direccion">Address</string>
    <string name="localidad">Location</string>
    <string name="usuario">User</string>
    <string name="pais">Country</string>
    <string name="contacto">Contact</string>
    <string name="email">Email</string>

    <string name="test_warning">WARNING\nThis app is an academic test. It is not fully implemented</string>
    <string name="vacio1">There is no any itinerary created at this moment</string>
    <string name="vacio2">Press + button and create your own itineraries</string>
    <string name="vacio3">There is no any point of interest in the itinerary</string>
    <string name="vacio4">Press + button and write down the place you want to see in the map. There, you can choose the places you want to add to the itinerary</string>
    <string name="vacio5">Remember to zoom in to find more available places</string>

    <string name="locale">1</string>

    <string name="ap_pulsa_menu">Click to open the menu</string>
    <string name="ap_pulsa_crear_itinerario">Click to create a new itinerary</string>
    <string name="ap_desliza_marcar_itinerario">Slide to set an itinerary as done</string>
    <string name="ap_desliza_eliminar_itinerario">Slide to delete an itinerary</string>
    <string name="ap_visualiza_itinerario_mapa">See all the itinerary on the map from the menu</string>
    <string name="ap_pulsa_crear_poi">Click to add new points of interest to the itinerary</string>
    <string name="ap_desliza_marcar_poi">Slide to set point as visited</string>
    <string name="ap_pulsado_posicion_poi">Keep pressed to change the position of a point</string>
    <string name="ap_desliza_eliminar_poi">Slide to delete a point</string>

    <string name="ap_desliza_imagen">Slide to see the image</string>
    <string name="ap_pulsa_telefono">Click on phone to call there</string>
    <string name="ap_pulsa_enlace">Click on link to open the browser</string>

    <string name="puntos_de_interes_en_la_ruta">Points of interest in the itinerary</string>
    <string name="fotos">Photos on Google+</string>
    <string name="transition_name_icon">transition:Icon</string>
    <string name="transition_name_user">transition:USER</string>
    <string name="transition_name_logo">transition:Logo</string>
    <string name="comentarios">Comements</string>

</resources>
