<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.masterandroid.wander.PerfilUsuarioActivity"
    tools:showIn="@layout/contenedor_perfil_usuario"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/basico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.makeramen.roundedimageview.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/foto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/ic_account_box"
                android:scaleType="fitCenter"
                app:riv_corner_radius="6dip"
                app:riv_border_width="3dip"
                app:riv_border_color="@color/colorAccent"
                app:riv_mutate_background="false"
                app:riv_tile_mode="clamp"
                app:riv_oval="false"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/md_keylines"
                android:text="@string/usuario"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/article_titles"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="8dp"
                android:text="@string/nombre_de_usuario"
                android:textStyle="bold"
                android:textSize="@dimen/article_subheading" />

            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/nombre"
                android:textSize="@dimen/article_subheading" />


            <TextView
                android:id="@+id/apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="18dp"
                android:text="@string/apellido"
                android:textSize="@dimen/article_subheading" />


        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/localizacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="@dimen/md_keylines"
        android:layout_marginTop="@dimen/md_keylines"
        android:text="@string/direccion"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/article_titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/basico" />

    <TextView
        android:id="@+id/direcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/direccion"
        android:textSize="@dimen/article_subheading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/localizacion" />



    <LinearLayout
        android:id="@+id/localidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/direcion">


        <TextView
            android:id="@+id/poblacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/localidad"
            android:textSize="@dimen/article_subheading"/>

        <TextView
            android:id="@+id/pais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/pais"
            android:textSize="@dimen/article_subheading" />



    </LinearLayout>


    <TextView
        android:id="@+id/contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="@dimen/md_keylines"
        android:layout_marginTop="@dimen/md_keylines"
        android:text="@string/contacto"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/article_titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/localidad" />

    <TextView
        android:id="@+id/e_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/email"
        android:textSize="@dimen/article_subheading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacto" />




        <TextView
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:textSize="@dimen/article_subheading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/e_mail"
            android:text="@string/telefono" />



</android.support.constraint.ConstraintLayout>