<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/fondo"
    android:padding="16dp"
    android:transitionGroup="false">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_wander_heading"
        android:transitionName ="@string/transition_name_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:scaleType="fitCenter" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/article_subheading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="?android:attr/actionBarSize"
        android:transitionGroup="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/article_subheading" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="?android:attr/actionBarSize"
        android:transitionGroup="true"
        app:passwordToggleContentDescription="descripcion"
        app:passwordToggleDrawable="@drawable/toogle_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="@dimen/article_subheading" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/recordarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recordarme"
        android:textColor="@android:color/darker_gray"
        android:textSize="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_contraseña" />



    <Button
        android:id="@+id/butt_acceder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple"
        android:elevation="2dp"
        android:onClick="acceder"
        android:text="@string/iniciar_sesion"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/butt_borrar"
        app:layout_constraintTop_toBottomOf="@+id/recordarme" />

    <Button
        android:id="@+id/butt_borrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:elevation="2dp"
        android:onClick="borrarCampos"
        android:text="@string/borrar"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/butt_acceder"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/butt_acceder" />

    <Button
        android:id="@+id/butt_registrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple"
        android:elevation="2dp"
        android:onClick="registrarUsuario"
        android:text="@string/registrarse"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butt_acceder" />
</android.support.constraint.ConstraintLayout>