<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.example.viajes.Registro">
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar_correo"
        android:layout_marginTop="16dp" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:transitionGroup="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textSize="14dp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:transitionGroup="true"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="14dp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:transitionGroup="true"
        app:layout_constraintTop_toBottomOf="@+id/til_contraseña"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="14dp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:transitionGroup="true"
        app:layout_constraintTop_toBottomOf="@+id/til_nombre"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="14dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/butt_registrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:elevation="2dp"
        android:onClick="registrarUsuario"
        android:text="@string/registrarse"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_apellido" />
</android.support.constraint.ConstraintLayout>
