<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/abc_popup_background_mtrl_mult"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_dra_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dip"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/txt_dra_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dip"
            android:gravity="center"
            android:text="@string/layout_dra_title"
            android:textColor="#262626"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_dra_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dp"
            android:text="@string/layout_dra_subtitle"
            android:textAlignment="center"
            android:textColor="#494949"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_dra_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/iview_dra_star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_rate_yellow" />

        <ImageView
            android:id="@+id/iview_dra_star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_rate_yellow" />

        <ImageView
            android:id="@+id/iview_dra_star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_rate_yellow" />

        <ImageView
            android:id="@+id/iview_dra_star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_rate_yellow" />

        <ImageView
            android:id="@+id/iview_dra_star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_rate_yellow" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_dra_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"
        android:text="@string/layout_dra_btn_rate"
        android:textColor="@color/textWhite"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_dra_rate_later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/layout_dra_btn_rate_later"
        android:textColor="@color/textWhite"
        android:textSize="18sp" />


</LinearLayout>